grade-reports/exam-2/test-hard-02.txt
CD to .. 
/home/mattox/repos/cs225/fa16-exam2-grading/submissions/xyu69
###############################
##                           ##
##     Grading question      ##
##                           ##
###############################
Grader dir is /home/mattox/repos/cs225/fa16-exam2-grading/code-grading/scripts
qid is hard-02
variant is
test_dir is /home/mattox/repos/cs225/fa16-exam2-grading/code-grading/scripts/tests/hard-02/
fullTmpDir = /home/mattox/repos/cs225/fa16-exam2-grading/submissions/xyu69/grade-.gT3
:: Compiling...
g++ -std=c++0x -c -g -O0 -Wall -Wextra -Wno-unused-function   -c -o hard.o hard.cpp
hard.cpp: In function ‘void merge(LinkedList*, LinkedList*, LinkedList*)’:
hard.cpp:9:22: error: request for member ‘head’ in ‘lst1’, which is of pointer type ‘LinkedList*’ (maybe you meant to use ‘->’ ?)
  Node * first = lst1.head;
                      ^~~~
hard.cpp:10:23: error: request for member ‘head’ in ‘lst2’, which is of pointer type ‘LinkedList*’ (maybe you meant to use ‘->’ ?)
  Node * second = lst2.head;
                       ^~~~
hard.cpp:11:10: error: request for member ‘head’ in ‘lst1’, which is of pointer type ‘LinkedList*’ (maybe you meant to use ‘->’ ?)
  if(lst1.head->data < lst2.head->data)
          ^~~~
hard.cpp:11:28: error: request for member ‘head’ in ‘lst2’, which is of pointer type ‘LinkedList*’ (maybe you meant to use ‘->’ ?)
  if(lst1.head->data < lst2.head->data)
                            ^~~~
hard.cpp:13:7: error: request for member ‘head’ in ‘mrg’, which is of pointer type ‘LinkedList*’ (maybe you meant to use ‘->’ ?)
   mrg.head = lst1.head;
       ^~~~
hard.cpp:13:19: error: request for member ‘head’ in ‘lst1’, which is of pointer type ‘LinkedList*’ (maybe you meant to use ‘->’ ?)
   mrg.head = lst1.head;
                   ^~~~
hard.cpp:18:7: error: request for member ‘head’ in ‘mrg’, which is of pointer type ‘LinkedList*’ (maybe you meant to use ‘->’ ?)
   mrg.head = lst2.head;
       ^~~~
hard.cpp:18:19: error: request for member ‘head’ in ‘lst2’, which is of pointer type ‘LinkedList*’ (maybe you meant to use ‘->’ ?)
   mrg.head = lst2.head;
                   ^~~~
hard.cpp:21:14: error: request for member ‘head’ in ‘mrg’, which is of pointer type ‘LinkedList*’ (maybe you meant to use ‘->’ ?)
   curr = mrg.head;
              ^~~~
<builtin>: recipe for target 'hard.o' failed
make: *** [hard.o] Error 1
Could not compile hard.o.

Grade for question : 0/100


~ ~ ~

Grade: 0

Details:
test,grade
_compiled,0
